--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -4,7 +4,8 @@
     box-sizing: border-box;
 }
 
-input, button, textarea, select {
+// input, button, textarea, select
+input, textarea, button, select {
     margin: 0;
     font-family: inherit;
 }
