--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,14 +1,13 @@
 @import "reset";
-@import "variables/global.scss";
-@import "themes/normal.scss";
-@import "themes/dark.scss";
+@import "variables/global";
+@import "themes/normal";
+@import "themes/dark";
 
 
 .app {
     font: var(--font-m);
     background-color: var(--bg-color);
     color: var(--primary-color);
-
     min-height: 100vh;
     
 }
